# asteroids

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: basic_impl.cpp  main.cpp  shader.cpp  shader.hpp
src/shaders/: first_shader.frag.glsl  first_shader.vert.glsl
